major overhaul; tracking total and MERGED prs instead of approved prs

--- a/.github/workflows/pr‑stats.yml
+++ b/.github/workflows/pr‑stats.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v5
         with: { python-version: "3.x" }
 
-      - run: pip install --quiet matplotlib pandas requests
+      - run: pip install --quiet matplotlib pandas requests numpy
 
       - name: Collect PR data
         run: python collect_data.py
