--- a/.github/workflows/pr‑stats.yml
+++ b/.github/workflows/pr‑stats.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Collect PR data
         run: python collect_data.py
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate chart
         run: python generate_chart.py
@@ -31,5 +33,5 @@ jobs:
           commit_message: "chore: update PR‑approval chart"
           file_pattern: "data.csv README.md docs/index.html docs/chart.png docs/chart-data.json"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
-          commit_user_name: 'github-actions[bot]'
-          commit_user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_user_name: "github-actions[bot]"
+          commit_user_email: "github-actions[bot]@users.noreply.github.com"
